src/test/deca/context/valid/class/22-instanceOf.deca
/* Description:
    test l'instanceof

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     decac ne doit afficher rien
*/

class A {
  protected B b;
  boolean equals(Object a){
    if ( a instanceof A)
    {
      return true;
    } else {
      return false;
    }
  }
}

class B{
  protected int a;
}
class C extends A{

}
{
  C c = new C();
  A a  = new A();
  if (a.equals(c)){
    print("ok");
  } else {
    print("erreur");
  }
}
